starting route working

--- a/public/home.html
+++ b/public/home.html
@@ -19,7 +19,7 @@
             <p class="lead">Do you want to find a friend?</p>
 
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="./survey.html" role="button">Start your friendship</a>
+                <a class="btn btn-primary btn-lg" href="/survey" role="button">Start your friendship</a>
             </p>
         </div>
     </div>
