--- a/public/survey.html
+++ b/public/survey.html
@@ -8,7 +8,7 @@
     <title>Friend finder</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
@@ -30,107 +30,135 @@
                 <div class="form-group">
                     <label for="q1">The internet is a way of life</label>
                     <select class="form-control" id="q1">
-                          <option>1(no way)</option>
-                          <option>2</option>
-                          <option>3</option>
-                          <option>4</option>
-                          <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                         </select>
                 </div>
                 <div class="form-group">
                     <label for="q2">I enjoy Computer science related activities</label>
                     <select class="form-control" id="q2">
-                            <option>1(no way)</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                           </select>
                 </div>
                 <div class="form-group">
                     <label for="q3">I enjoy sports and sport related activities</label>
                     <select class="form-control" id="q3">
-                            <option>1(no way)</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                           </select>
                 </div>
                 <div class="form-group">
                     <label for="q4">I think the world is full of wonder</label>
                     <select class="form-control" id="q4">
-                            <option>1(no way)</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                           </select>
                 </div>
                 <div class="form-group">
                     <label for="q5">one day I would love to see a monkey with a tiny hotdog hat</label>
                     <select class="form-control" id="q5">
-                            <option>1(no way)</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                           </select>
                 </div>
                 <div class="form-group">
                     <label for="q6">I am a very happy person</label>
                     <select class="form-control" id="q6">
-                            <option>1(no way)</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                           </select>
                 </div>
                 <div class="form-group">
                     <label for="q7">I love talking in front of large groups</label>
                     <select class="form-control" id="q7">
-                        <option>1(no way)</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                       </select>
                 </div>
                 <div class="form-group">
                     <label for="q8">I am very shy </label>
                     <select class="form-control" id="q8">
-                        <option>1(no way)</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                       </select>
                 </div>
                 <div class="form-group">
                     <label for="q9">The glass is half full</label>
                     <select class="form-control" id="q9">
-                        <option>1(no way)</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                       </select>
                 </div>
                 <div class="form-group">
                     <label for="q10">You must take risks to have success </label>
                     <select class="form-control" id="q10">
-                        <option>1(no way)</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5(yea way!)</option>
+                        <option value = 1 >1(no way)</option>
+                        <option value = 2>2</option>
+                        <option value = 3>3</option>
+                        <option value = 4>4</option>
+                        <option value = 5>5(yea way!)</option>
                       </select>
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">Seek friendship</button>
+                <button type="submit" class="btn btn-primary mb-2" id="submitbtn">Seek friendship</button>
             </form>
         </div>
     </div>
+
+    <script type="text/javascript">
+        $("#submitbtn").on("click", function(event) {
+            event.preventDefault();
+
+            var newFriend = {
+                name: $("#nameInput").val().trim(),
+                picture: $("#picInput").val().trim(),
+                scores: [
+                    $("#q1").val(),
+                    $("#q2").val(),
+                    $("#q3").val(),
+                    $("#q4").val(),
+                    $("#q5").val(),
+                    $("#q6").val(),
+                    $("#q7").val(),
+                    $("#q8").val(),
+                    $("#q9").val(),
+                    $("#q10").val(),
+                ]
+            };
+            $.post("/api/new", newFriend)
+                .then(function(data) {
+                    console.log(data);
+                });
+
+        });
+    </script>
 
 
 </body>
