--- a/public/survey.html
+++ b/public/survey.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Friend finder</title>
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/style.css">
 
 </head>
 
@@ -110,7 +110,7 @@
                 <div class="form-group">
                     <label for="q9">The glass is half full</label>
                     <select class="form-control" id="q9">
-                        <option value = 1 >1(no way)</option>
+                        <option value = 1>1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
@@ -132,7 +132,33 @@
         </div>
     </div>
 
+<div id="friendmodal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">YOUR NEW FRIEND IS.....</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="friendName"> </div>
+        <div id="friendpic"> </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
     <script type="text/javascript">
+        $.ajaxSetup({
+            traditional:true,
+        });
         $("#submitbtn").on("click", function(event) {
             event.preventDefault();
 
@@ -154,7 +180,32 @@
             };
             $.post("/api/new", newFriend)
                 .then(function(data) {
-                    console.log(data);
+                    $.get("/api/all").then(function(apiget){
+                        var bestMatch = 10;
+                        var bestFriend 
+                        var dif
+                        for(var i = 0 ; apiget.length - 1 > i ; i ++){
+                            dif = 0;
+                            for(b = 0 ;newFriend.scores.length > b ; b ++){
+                                 dif +=(Math.abs(parseInt(apiget[i].scores[b]) - parseInt(newFriend.scores[b])))
+                                
+                                if(dif <= bestMatch){
+                                    bestFriend = apiget[i] ;
+
+                                }
+                            }
+
+
+                        }
+
+                     $("#friendmodal").modal("toggle");
+                    // console.log(data);
+                    console.log(bestFriend);
+                    console.log(bestFriend.name)
+                    $("#friendName").text(bestFriend.name);
+                    $("#friendpic").html("<img src="+bestFriend.photo+">");
+
+                     });
                 });
 
         });
