--- a/public/survey.html
+++ b/public/survey.html
@@ -132,32 +132,32 @@
         </div>
     </div>
 
-<div id="friendmodal" class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">YOUR NEW FRIEND IS.....</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <div id="friendmodal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">YOUR NEW FRIEND IS.....</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-        <div id="friendName"> </div>
-        <div id="friendpic"> </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
+                </div>
+                <div class="modal-body">
+                    <div id="friendName"> </div>
+                    <div id="friendpic"> </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
 
 
 
     <script type="text/javascript">
         $.ajaxSetup({
-            traditional:true,
+            traditional: true,
         });
         $("#submitbtn").on("click", function(event) {
             event.preventDefault();
@@ -180,32 +180,41 @@
             };
             $.post("/api/new", newFriend)
                 .then(function(data) {
-                    $.get("/api/all").then(function(apiget){
-                        var bestMatch = 10;
-                        var bestFriend 
+                    $.get("/api/all").then(function(apiget) {
+                        var bestMatch = []
+                        var bestFriend = 0
+                        var result
                         var dif
-                        for(var i = 0 ; apiget.length - 1 > i ; i ++){
+                        for (var i = 0; apiget.length - 1 > i; i++) {
                             dif = 0;
-                            for(b = 0 ;newFriend.scores.length > b ; b ++){
-                                 dif +=(Math.abs(parseInt(apiget[i].scores[b]) - parseInt(newFriend.scores[b])))
-                                
-                                if(dif <= bestMatch){
-                                    bestFriend = apiget[i] ;
+                            for (b = 0; newFriend.scores.length > b; b++) {
+                                dif += (Math.abs(parseInt(apiget[i].scores[b]) - parseInt(newFriend.scores[b])))
 
-                                }
+
                             }
-
+                            bestMatch.push(dif);
+                            console.log(bestMatch);
 
                         }
+                        for (var c = 0; bestMatch.length > c; c++) {
+                            if (bestMatch[c] <= bestMatch[bestFriend]) {
+                                bestFriend = c;
 
-                     $("#friendmodal").modal("toggle");
-                    // console.log(data);
-                    console.log(bestFriend);
-                    console.log(bestFriend.name)
-                    $("#friendName").text(bestFriend.name);
-                    $("#friendpic").html("<img src="+bestFriend.photo+">");
 
-                     });
+                            }
+
+                        }
+                        result = apiget[bestFriend];
+
+
+                        $("#friendmodal").modal("toggle");
+                        // console.log(data);
+                        console.log(result);
+                        console.log(result.name)
+                        $("#friendName").text(result.name);
+                        $("#friendpic").html("<img src=" + result.photo + ">");
+
+                    });
                 });
 
         });
