--- a/public/survey.html
+++ b/public/survey.html
@@ -15,210 +15,223 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="card text-center">
+        <div class="card-header">
+            <h5 class="card-title">Special Friendship Survey</h5>
+        </div>
+        <div class="card-body">
 
-        <div class="col-lg-8 offset-lg-2">
-            <form>
-                <div class="form-group">
-                    <label for="Name">Your name</label>
-                    <input type="Name" class="form-control" id="nameInput" placeholder="Enter Name">
-                </div>
-                <div class="form-group">
-                    <label for="pic">Link to photo</label>
-                    <input type="pic" class="form-control" id="picInput" placeholder="Link to your picture">
-                </div>
-                <div class="form-group">
-                    <label for="q1">The internet is a way of life</label>
-                    <select class="form-control" id="q1">
+
+
+            <div class="row">
+
+                <div class="col-lg-8 offset-lg-2">
+                    <form>
+                        <div class="form-group">
+                            <label for="Name">Your name</label>
+                            <input type="Name" class="form-control" id="nameInput" placeholder="Enter Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="pic">Link to photo</label>
+                            <input type="pic" class="form-control" id="picInput" placeholder="Link to your picture">
+                        </div>
+                        <div class="form-group">
+                            <label for="q1">The internet is a way of life</label>
+                            <select class="form-control" id="q1">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                         </select>
-                </div>
-                <div class="form-group">
-                    <label for="q2">I enjoy Computer science related activities</label>
-                    <select class="form-control" id="q2">
+                        </div>
+                        <div class="form-group">
+                            <label for="q2">I enjoy Computer science related activities</label>
+                            <select class="form-control" id="q2">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                           </select>
-                </div>
-                <div class="form-group">
-                    <label for="q3">I enjoy sports and sport related activities</label>
-                    <select class="form-control" id="q3">
+                        </div>
+                        <div class="form-group">
+                            <label for="q3">I enjoy sports and sport related activities</label>
+                            <select class="form-control" id="q3">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                           </select>
-                </div>
-                <div class="form-group">
-                    <label for="q4">I think the world is full of wonder</label>
-                    <select class="form-control" id="q4">
+                        </div>
+                        <div class="form-group">
+                            <label for="q4">I think the world is full of wonder</label>
+                            <select class="form-control" id="q4">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                           </select>
-                </div>
-                <div class="form-group">
-                    <label for="q5">one day I would love to see a monkey with a tiny hotdog hat</label>
-                    <select class="form-control" id="q5">
+                        </div>
+                        <div class="form-group">
+                            <label for="q5">one day I would love to see a monkey with a tiny hotdog hat</label>
+                            <select class="form-control" id="q5">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                           </select>
-                </div>
-                <div class="form-group">
-                    <label for="q6">I am a very happy person</label>
-                    <select class="form-control" id="q6">
+                        </div>
+                        <div class="form-group">
+                            <label for="q6">I am a very happy person</label>
+                            <select class="form-control" id="q6">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                           </select>
-                </div>
-                <div class="form-group">
-                    <label for="q7">I love talking in front of large groups</label>
-                    <select class="form-control" id="q7">
+                        </div>
+                        <div class="form-group">
+                            <label for="q7">I love talking in front of large groups</label>
+                            <select class="form-control" id="q7">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                       </select>
-                </div>
-                <div class="form-group">
-                    <label for="q8">I am very shy </label>
-                    <select class="form-control" id="q8">
+                        </div>
+                        <div class="form-group">
+                            <label for="q8">I am very shy </label>
+                            <select class="form-control" id="q8">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                       </select>
-                </div>
-                <div class="form-group">
-                    <label for="q9">The glass is half full</label>
-                    <select class="form-control" id="q9">
+                        </div>
+                        <div class="form-group">
+                            <label for="q9">The glass is half full</label>
+                            <select class="form-control" id="q9">
                         <option value = 1>1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                       </select>
-                </div>
-                <div class="form-group">
-                    <label for="q10">You must take risks to have success </label>
-                    <select class="form-control" id="q10">
+                        </div>
+                        <div class="form-group">
+                            <label for="q10">You must take risks to have success </label>
+                            <select class="form-control" id="q10">
                         <option value = 1 >1(no way)</option>
                         <option value = 2>2</option>
                         <option value = 3>3</option>
                         <option value = 4>4</option>
                         <option value = 5>5(yea way!)</option>
                       </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary mb-2" id="submitbtn">Seek friendship</button>
+                    </form>
                 </div>
-                <button type="submit" class="btn btn-primary mb-2" id="submitbtn">Seek friendship</button>
-            </form>
+            </div>
+            <div class="card-footer text-muted">
+                Friendship... is just that easy ....
+            </div>
         </div>
-    </div>
 
-    <div id="friendmodal" class="modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">YOUR NEW FRIEND IS.....</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+        <div id="friendmodal" class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">YOUR NEW FRIEND IS.....</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-                </div>
-                <div class="modal-body">
-                    <div id="friendName"> </div>
-                    <div id="friendpic"> </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="friendName"> </div>
+                        <div id="friendpic"> </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
 
-    <script type="text/javascript">
-        $.ajaxSetup({
-            traditional: true,
-        });
-        $("#submitbtn").on("click", function(event) {
-            event.preventDefault();
+        <script type="text/javascript">
+            $.ajaxSetup({
+                traditional: true,
+            });
+            $("#submitbtn").on("click", function(event) {
+                event.preventDefault();
 
-            var newFriend = {
-                name: $("#nameInput").val().trim(),
-                picture: $("#picInput").val().trim(),
-                scores: [
-                    $("#q1").val(),
-                    $("#q2").val(),
-                    $("#q3").val(),
-                    $("#q4").val(),
-                    $("#q5").val(),
-                    $("#q6").val(),
-                    $("#q7").val(),
-                    $("#q8").val(),
-                    $("#q9").val(),
-                    $("#q10").val(),
-                ]
-            };
-            $.post("/api/new", newFriend)
-                .then(function(data) {
-                    $.get("/api/all").then(function(apiget) {
-                        var bestMatch = []
-                        var bestFriend = 0
-                        var result
-                        var dif
-                        for (var i = 0; apiget.length - 1 > i; i++) {
-                            dif = 0;
-                            for (b = 0; newFriend.scores.length > b; b++) {
-                                dif += (Math.abs(parseInt(apiget[i].scores[b]) - parseInt(newFriend.scores[b])))
+                var newFriend = {
+                    name: $("#nameInput").val().trim(),
+                    picture: $("#picInput").val().trim(),
+                    scores: [
+                        $("#q1").val(),
+                        $("#q2").val(),
+                        $("#q3").val(),
+                        $("#q4").val(),
+                        $("#q5").val(),
+                        $("#q6").val(),
+                        $("#q7").val(),
+                        $("#q8").val(),
+                        $("#q9").val(),
+                        $("#q10").val(),
+                    ]
+                };
+                $.post("/api/new", newFriend)
+                    .then(function(data) {
+                        $.get("/api/all").then(function(apiget) {
+                            var bestMatch = []
+                            var bestFriend = 0
+                            var result
+                            var dif
+                            for (var i = 0; apiget.length - 1 > i; i++) {
+                                dif = 0;
+                                for (b = 0; newFriend.scores.length > b; b++) {
+                                    dif += (Math.abs(parseInt(apiget[i].scores[b]) - parseInt(newFriend.scores[b])))
 
 
-                            }
-                            bestMatch.push(dif);
-                            console.log(bestMatch);
-
-                        }
-                        for (var c = 0; bestMatch.length > c; c++) {
-                            if (bestMatch[c] <= bestMatch[bestFriend]) {
-                                bestFriend = c;
-
+                                }
+                                bestMatch.push(dif);
+                                console.log(bestMatch);
 
                             }
+                            for (var c = 0; bestMatch.length > c; c++) {
+                                if (bestMatch[c] <= bestMatch[bestFriend]) {
+                                    bestFriend = c;
 
-                        }
-                        result = apiget[bestFriend];
+
+                                }
+
+                            }
+                            result = apiget[bestFriend];
 
 
-                        $("#friendmodal").modal("toggle");
-                        // console.log(data);
-                        console.log(result);
-                        console.log(result.name)
-                        $("#friendName").text(result.name);
-                        $("#friendpic").html("<img src=" + result.photo + ">");
+                            $("#friendmodal").modal("toggle");
+                            // console.log(data);
+                            console.log(result);
+                            console.log(result.name)
+                            $("#friendName").text(result.name);
+                            $("#friendpic").html("<img src=" + result.photo + ">");
 
+                        });
                     });
-                });
 
-        });
-    </script>
+            });
+        </script>
 
 
 </body>
