forgot bottom links

--- a/public/home.html
+++ b/public/home.html
@@ -24,7 +24,10 @@
         </div>
     </div>
     </div>
-
+    <div class="card-footer text-muted">
+        <a href="/api/all"> <u>api link</u></a>
+        <a href="https://github.com/joeman098/friendfinder"><u>github repo</u></a>
+    </div>
 </body>
 
 </html>
