--- a/public/survey.html
+++ b/public/survey.html
@@ -140,7 +140,8 @@
                 </div>
             </div>
             <div class="card-footer text-muted">
-                Friendship... is just that easy ....
+                <a href="/api/all"> <u>api link</u></a>
+                <a href="https://github.com/joeman098/friendfinder"><u>github repo</u></a>
             </div>
         </div>
 
